# thesis

./: .gitmodules  Dockerfile  readme.md
ReelayComponents/: readme.md
ReelayComponents/ReelayMonitor/: ReelayMonitor.fpp
ReelayComponents/ReelayMonitor/test/ut/: TestMain.cpp
ReelayComponents/ReelayPorts/: ReelayPorts.fpp
ReelayComponents/ReelaySensor/: ReelaySensor.cpp
ReelayComponents/ReelaySensor/test/ut/: Tester.cpp
ReelayComponents/ReelayTypes/: CMakeLists.txt  Json.cpp  Json.hpp
Thesis/: bib.bib  box.tikzstyles  make.sh  pandoc_template.pndc  thesis.md
Thesis/figures/: generic_sensor_diagram.tikz  rocket_example_topo.tikz
components_example/ReelayComponents/ReelayMonitor/: CMakeLists.txt
components_example/Ref/: CMakeLists.txt  rocket_charts.txt  rocket_dashboard.txt  rocket_dashboard.xml
components_example/Ref/ReelayComponents/: CMakeLists.txt
components_example/Ref/ReelayComponents/ReelayMonitor/: ReelayMonitor.cpp  ReelayMonitor.hpp
components_example/Ref/ReelayComponents/ReelayPorts/: CMakeLists.txt  ReelayPorts.fpp
components_example/Ref/ReelayComponents/ReelaySensor/: CMakeLists.txt  ReelaySensor.fpp  ReelaySensor.hpp
components_example/Ref/RocketSensor/: CMakeLists.txt  RocketSensor.cpp  RocketSensor.fpp  RocketSensor.hpp
components_example/Ref/RocketSimulator/: CMakeLists.txt  RocketSimulator.cpp  RocketSimulator.fpp  RocketSimulator.hpp
components_example/Ref/Top/: Main.cpp  instances.fpp  topology.fpp  unconnected.txt
components_example/config/: FpConfig (magnetite's conflicted copy 2022-09-11).hpp
(+6 files in other folders)
